fix(core-expand-collapse): fix header overflow on tertiary text for IE11

--- a/packages/ExpandCollapse/PanelWrapper/PanelWrapper.modules.scss
+++ b/packages/ExpandCollapse/PanelWrapper/PanelWrapper.modules.scss
@@ -1,13 +1,16 @@
 @import '~@tds/core-colours/colours';
 @import '~@tds/core-responsive/responsive';
 
+.fullWidth { width: 100%; }
+
 .header {
-  width: 100%;
+  composes: fullWidth;
   text-align: left;
 }
 
 .headerAlign {
-  flex: 1;
+  flex: 1 1 auto;
+  composes: fullWidth;
   align-items: flex-start;
 }
 
